--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.Orders.OrderFragments.OrderFragment"
-    android:background="@color/box_background_color">
+    android:background="@color/box_background_color"
+    tools:context=".UI.Orders.OrderFragments.OrderFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,18 +16,187 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="22dp"
+                android:layout_marginTop="28dp"
+                android:orientation="vertical">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="4dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="17dp"
+                                android:layout_marginTop="15dp"
+                                android:text="Avail discount on your first shipment*"
+                                android:textColor="@color/black"
+                                android:textFontWeight="700"
+                                android:textSize="11sp" />
+
+                            <EditText
+                                android:layout_width="194dp"
+                                android:layout_height="28dp"
+                                android:layout_marginLeft="19dp"
+                                android:layout_marginTop="4dp"
+                                android:background="@drawable/edittext_bg"
+                                android:hint="Enter referal code"
+                                android:inputType="textEmailAddress"
+                                android:maxLines="1"
+                                android:paddingLeft="10dp"
+                                android:textColor="@color/black"
+                                android:textColorHint="@color/hint_color"
+                                android:textCursorDrawable="@color/hint_color"
+                                android:textSize="12sp" />
+
+                            <com.google.android.material.button.MaterialButton
+                                android:layout_width="118dp"
+                                android:layout_height="24dp"
+                                android:layout_marginLeft="57dp"
+                                android:layout_marginTop="12dp"
+                                android:insetTop="0dp"
+                                android:insetBottom="0dp"
+                                android:text="Submit"
+                                android:textAllCaps="false"
+                                android:textFontWeight="700"
+                                android:textSize="10sp"
+                                app:backgroundTint="#17B28F"
+                                app:cornerRadius="5dp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="31dp"
+                                android:layout_marginTop="12dp"
+                                android:layout_marginBottom="15dp"
+                                android:text="*Refferal valid only for 7 days from Sign-up"
+                                android:textColor="@color/black"
+                                android:textFontWeight="400"
+                                android:textSize="8sp" />
+
+                        </LinearLayout>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="18dp"
+                            android:layout_marginVertical="18dp"
+                            android:src="@drawable/ic_discount1" />
 
 
+                    </LinearLayout>
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        android:textSize="30sp"
-        android:gravity="center"/>
+                </androidx.cardview.widget.CardView>
 
 
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="4dp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="14dp"
+                                android:layout_marginTop="12dp"
+                                android:text="Verify your account details to get started"
+                                android:textColor="@color/black"
+                                android:textFontWeight="600"
+                                android:textSize="11sp" />
+
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginVertical="12dp"
+                                android:layout_marginLeft="14dp"
+                                android:lineHeight="10.97dp"
+                                android:text="@string/varify_your_account_details"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="9sp" />
+
+
+                        </LinearLayout>
+
+
+                        <com.google.android.material.button.MaterialButton
+                            android:layout_width="118dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginRight="15dp"
+                            android:insetTop="0dp"
+                            android:insetBottom="0dp"
+                            android:text="Verify Email"
+                            android:textAllCaps="false"
+                            android:textFontWeight="700"
+                            android:textSize="10sp"
+                            app:backgroundTint="#17B28F"
+                            app:cornerRadius="5dp" />
+
+                    </LinearLayout>
+
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="4dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="343dp"
+                            android:src="@drawable/banner"
+                            android:layout_marginTop="-50dp"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="SHOP"/>
+
+
+                    </LinearLayout>
+
+
+                </androidx.cardview.widget.CardView>
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
